--- a/web.html
+++ b/web.html
@@ -358,7 +358,7 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <a href="#" class="logo">MedSearch</a>
+        <a href="#" class="logo">Mediscope</a>
         <div class="nav-links">
             <a href="#" class="nav-link" onclick="showPage('login')">Login</a>
             <a href="#" class="nav-link" onclick="showPage('signup')">Sign Up</a>
@@ -372,7 +372,7 @@
         <!-- Login Page -->
         <div id="login" class="page active">
             <div class="glass-card" style="max-width: 400px; margin: 2rem auto;">
-                <h2 style="text-align: center; margin-bottom: 2rem; color: #00d4ff;">Login to MedSearch</h2>
+                <h2 style="text-align: center; margin-bottom: 2rem; color: #00d4ff;">Login to Mediscope</h2>
                 <form id="loginForm">
                     <div class="form-group">
                         <label for="email">Email Address</label>
@@ -531,7 +531,7 @@
                                 <input type="text" id="manufacturer" class="form-control" placeholder="Enter manufacturer name" required>
                             </div>
                             <div class="form-group">
-                                <label for="price">Price ($)</label>
+                                <label for="price">Price (Rs)</label>
                                 <input type="number" id="price" class="form-control" placeholder="Enter price" step="0.01" required>
                             </div>
                             <div class="form-group">
