--- a/web.html
+++ b/web.html
@@ -384,7 +384,7 @@
                     </div>
                     <button type="submit" class="btn" style="width: 100%;">Login</button>
                 </form>
-                <div class="success-message" id="loginSuccess">Login successful! Welcome to MedSearch.</div>
+                <div class="success-message" id="loginSuccess">Login successful! Welcome to Mediscope.</div>
                 <p style="text-align: center; margin-top: 1rem; color: #b0b0b0;">
                     Don't have an account? <a href="#" onclick="showPage('signup')" style="color: #00d4ff;">Sign up here</a>
                 </p>
